// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label Snapshot > Default 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Label Snapshot > PositionActive 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionActive_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Label Snapshot > PositionIdle 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Label Snapshot > StateError 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateError_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Label Snapshot > StateIdle 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Label Snapshot > StateSuccess 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateSuccess_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;
